# gvdi

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: ci.yml
example/: CMakeLists.txt  example.cpp
examples/: CMakeLists.txt  custom_window.cpp  quickstart.cpp
ext/: CMakeLists.txt
gvdi/: CMakeLists.txt
gvdi/include/gvdi/: event_handler.hpp  frame.hpp  gvdi.hpp  instance.hpp  vulkan_context.hpp
gvdi/src/: gvdi.cpp
lib/: CMakeLists.txt  build_version.hpp.in
lib/include/gvdi/: app.hpp  context.hpp  error.hpp  event_listener.hpp  exception.hpp  gpu.hpp  gpu_info.hpp  gpu_selector.hpp  polymorphic.hpp  vulkan_wrap.hpp
lib/include/gvdi/gpu/: info.hpp  selector.hpp
lib/src/: app.cpp  context.cpp  gvdi.cpp
